Update and rename Assignmen_1_Aaditya_Kejriwal_250005.ipynb to Assignment_1_Aaditya_Kejriwal_250005.ipynb

--- a/Assignment_1/Assignment_1_Aaditya_Kejriwal_250005.ipynb
+++ b/Assignment_1/Assignment_1_Aaditya_Kejriwal_250005.ipynb
@@ -740,8 +740,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Q1 
-Initiate x as a 2x5 array with random values from 0 to 10(not inclusive).Get the maximum and minimum values and their indices of x along the second axis."
+        "Q1 - Initiate x as a 2x5 array with random values from 0 to 10(not inclusive).Get the maximum and minimum values and their indices of x along the second axis."
       ],
       "metadata": {
         "id": "Xi4VXFS_HXh3"
@@ -759,8 +758,7 @@ Initiate x as a 2x5 array with random values from 0 to 10(not inclusive).Get the
     {
       "cell_type": "markdown",
       "source": [
-        "Q2
-Let x be an array [1, 2, 3, ..., 9]. Split x into 3 arrays, each of which has 4, 2, and 3 elements in the original order."
+        "Q2- Let x be an array [1, 2, 3, ..., 9]. Split x into 3 arrays, each of which has 4, 2, and 3 elements in the original order."
       ],
       "metadata": {
         "id": "tQJVcviQHeqo"
@@ -809,8 +807,7 @@ Let x be an array [1, 2, 3, ..., 9]. Split x into 3 arrays, each of which has 4,
     {
       "cell_type": "markdown",
       "source": [
-        "      Q3-
-Write a Pandas function to find the count of unique species. "
+        "      Q3-Write a Pandas function to find the count of unique species. "
       ],
       "metadata": {
         "id": "QYhA9kb-IOjo"
